--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,13 @@
             <version>${spring.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>javax.annotation</groupId>
+            <artifactId>javax.annotation-api</artifactId>
+            <version>1.3.2</version>
+        </dependency>
+
+
         <!-- logging -->
         <dependency>
             <groupId>org.slf4j</groupId>
