--- a/pom.xml
+++ b/pom.xml
@@ -14,8 +14,9 @@
     <properties>
         <java.version>15</java.version>
         <spring.version>5.3.10</spring.version>
-        <slf4g.version>1.7.30</slf4g.version>
-        <logback.version>1.2.3</logback.version>
+        <slf4g.version>1.7.32</slf4g.version>
+        <logback.version>1.2.6</logback.version>
+        <junit.version>4.13.2</junit.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     </properties>
@@ -33,6 +34,14 @@
             <groupId>javax.annotation</groupId>
             <artifactId>javax.annotation-api</artifactId>
             <version>1.3.2</version>
+        </dependency>
+
+        <!-- test -->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>${junit.version}</version>
+            <scope>test</scope>
         </dependency>
 
 
@@ -85,6 +94,12 @@
                     <target>${java.version}</target>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.22.2</version>
+            </plugin>
+
         </plugins>
     </build>
 
