--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <logback.version>1.2.6</logback.version>
         <junit.version>4.13.2</junit.version>
         <postgresql.version>42.3.1</postgresql.version>
+        <assertj.version>3.21.0</assertj.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     </properties>
@@ -48,6 +49,12 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-test</artifactId>
             <version>${spring.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <version>${assertj.version}</version>
             <scope>test</scope>
         </dependency>
 
