--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <name>Calories Manager</name>
 
     <properties>
-        <java.version>15</java.version>
+        <java.version>17</java.version>
         <spring.version>5.3.10</spring.version>
         <slf4g.version>1.7.32</slf4g.version>
         <logback.version>1.2.6</logback.version>
@@ -97,8 +97,6 @@
             <version>${javax-el.version}</version>
         </dependency>
 
-
-
         <!-- logging -->
         <dependency>
             <groupId>org.slf4j</groupId>
@@ -124,6 +122,13 @@
             <version>${logback.version}</version>
             <scope>runtime</scope>
         </dependency>
+
+        <dependency>
+            <groupId>javax.annotation</groupId>
+            <artifactId>javax.annotation-api</artifactId>
+            <version>1.3.2</version>
+        </dependency>
+
 
         <!-- web -->
         <dependency>
